
# ---- STANDARD CONFIG ----
[project]
name = "VirgilAI"
description = "Virgil is an advanced virtual assistant that is based on the powerful GPT-3.5 artificial intelligence developed by OpenAI. This virtual assistant is designed to offer a wide range of features and capabilities similar to those of well-known virtual assistants such as Amazon's Alexa."
version = "v4.0.2"
readme = "README.md"
requires-python = ">=3.11"

[project.license]
file = "LICENSE"

[tool.debug]
level_debug = "info" # (debug,info,warning,error,critical)
logs_file = false

# ------ CONFIG FOR POETRY ------
[tool.poetry]
name = "VirgilAI"
version = "4.0.2"
description = "Virgil is an advanced virtual assistant that is based on the powerful GPT-3.5 artificial intelligence developed by OpenAI. This virtual assistant is designed to offer a wide range of features and capabilities similar to those of well-known virtual assistants such as Amazon's Alexa."
authors = ["Retr0100 <dragonfaiver@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.12.2"
colorama = "^0.4.6"
pyfiglet = "^1.0.2"
requests = "^2.31.0"
speechrecognition = "^3.10.0"
nltk = "^3.8.1"
pygame = "^2.5.2"
yt-dlp = "^2024.3.10"
gtts = "^2.4.0"
elevenlabs = "^0.2.26"
geopy = "^2.4.0"
requests-html = "^0.10.0"
tomli = "^2.0.1"
gensim = "^4.3.2"
executing = "^2.0.1"
tomlkit = "^0.12.2"
plyer = "^2.1.0"
win10toast = "^0.9"
winotify = "^1.1.0"
langchain = "^0.1.7"
openai = "^1.12.0"
wikipedia = "^1.4.0"
pyaudio = "^0.2.14"
langchain-openai = "^0.0.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
coverage = "^7.3.2"

# ------ CONFIG OF RUFF  --------
[tool.ruff]
ignore = ["E501"]
extend-include = ["*.pyw"]
select = ["E","F","N","D","UP","PYI","SLOT","SIM","TD","FIX","W","PL"]
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    "__pypackages__",
    "venv",
]
respect-gitignore = true
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "google"





